# filtros_cuda

./: CMakeLists.txt  README.md  imageFilter.cu  imageReader.cpp  main.cpp
